--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.LoginActivity"
+    tools:context=".view.activities.cadastro_login.LoginActivity"
     android:background="@drawable/mainbackground">
 
     <androidx.constraintlayout.widget.Guideline
@@ -41,7 +41,8 @@
         android:layout_height="40dp"
         android:layout_marginTop="8dp"
         android:gravity="bottom"
-        android:hint="E-mail"
+        android:hint="@string/e_mail"
+        android:autofillHints="@string/e_mail"
         android:inputType="textEmailAddress"
         android:textColor="@color/Branco"
         android:textColorHint="@color/Branco"
@@ -57,7 +58,8 @@
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:gravity="bottom"
-        android:hint="Senha"
+        android:hint="@string/senha"
+        android:autofillHints="@string/senha"
         android:textColor="@color/Branco"
         android:textColorHint="@color/Branco"
         android:textSize="16sp"
@@ -71,6 +73,7 @@
         android:layout_width="0dp"
         android:layout_height="208dp"
         android:layout_marginTop="4dp"
+        android:contentDescription="@string/logo"
         app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
         app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="@+id/guideline_esquerdo"
@@ -83,7 +86,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="235dp"
         android:layout_marginTop="12dp"
-        android:text="Esqueci a senha"
+        android:text="@string/esqueci_a_senha"
         android:textColor="@color/Branco"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
@@ -96,7 +99,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="Login"
+        android:text="@string/login"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
         app:layout_constraintTop_toBottomOf="@id/esqueci_senha" />
@@ -106,7 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="ou"
+        android:text="@string/ou"
         android:textColor="@color/Branco"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
@@ -118,7 +121,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Cadastrar"
+        android:text="@string/cadastrar"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
         app:layout_constraintTop_toBottomOf="@id/texto_ou" />
@@ -129,7 +132,7 @@
         android:layout_height="90dp"
         android:fontFamily="@font/faster_one"
         android:gravity="center"
-        android:text="Champions Updates"
+        android:text="@string/titulo_login"
         android:textColor="@color/Branco"
         android:textSize="32sp"
         app:layout_constraintBottom_toTopOf="@+id/campoEmail"
