--- a/app/src/main/res/layout/nextmatch_item.xml
+++ b/app/src/main/res/layout/nextmatch_item.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -20,6 +18,7 @@
             android:maxWidth="100dp"
             android:maxHeight="100dp"
             android:scaleType="fitXY"
+            android:contentDescription="@string/logo_do_time_da_casa"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -48,6 +47,7 @@
             android:maxWidth="100dp"
             android:maxHeight="100dp"
             android:scaleType="fitXY"
+            android:contentDescription="@string/logo_do_time_de_fora"
             app:layout_constraintBottom_toBottomOf="@id/separador"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/logoCasa"
@@ -74,7 +74,7 @@
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_marginStart="110dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="92dp"
             android:layout_marginEnd="110dp"
             android:background="@color/Branco"
             app:layout_constraintEnd_toEndOf="parent"
@@ -107,11 +107,10 @@
             android:gravity="center"
             android:textColor="@color/Branco"
             android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@id/separador2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/data"
-            app:layout_constraintBottom_toBottomOf="@id/separador2"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/data" />
 
 
         <View
@@ -122,18 +121,52 @@
             android:background="@color/preto"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/status"
+            app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.333" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="76dp"
             android:layout_height="59dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
+            android:contentDescription="@string/vs"
             app:layout_constraintEnd_toStartOf="@+id/logoFora"
+            app:layout_constraintHorizontal_bias="0.483"
             app:layout_constraintStart_toEndOf="@+id/logoCasa"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/imagem_x" />
+
+        <TextView
+            android:id="@+id/arbitro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="44dp"
+            android:layout_marginTop="85dp"
+            android:layout_marginEnd="28dp"
+            android:gravity="center"
+            android:shadowColor="#FFFFFF"
+            android:textColor="@color/Branco"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toStartOf="@+id/logoFora"
+            app:layout_constraintHorizontal_bias="0.475"
+            app:layout_constraintStart_toEndOf="@+id/logoCasa"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <TextView
+            android:id="@+id/estadio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="1dp"
+            android:layout_marginBottom="6dp"
+            android:gravity="center"
+            android:textColor="@color/Branco"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/separador"
+            app:layout_constraintEnd_toStartOf="@+id/nomeFora"
+            app:layout_constraintHorizontal_bias="0.473"
+            app:layout_constraintStart_toEndOf="@+id/nomeCasa"
+            app:layout_constraintTop_toBottomOf="@+id/arbitro"
+            app:layout_constraintVertical_bias="0.739" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
