--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.CadastroActivity"
+    tools:context=".view.activities.cadastro_login.CadastroActivity"
     android:background="@drawable/mainbackground">
 
     <androidx.constraintlayout.widget.Guideline
@@ -41,7 +41,8 @@
         android:layout_height="40dp"
         android:layout_marginTop="44dp"
         android:gravity="bottom"
-        android:hint="E-mail"
+        android:hint="@string/e_mail"
+        android:autofillHints="@string/e_mail"
         android:inputType="textEmailAddress"
         android:textColor="@color/Branco"
         android:textColorHint="@color/Branco"
@@ -57,7 +58,8 @@
         android:layout_height="40dp"
         android:layout_marginTop="20dp"
         android:gravity="bottom"
-        android:hint="Senha"
+        android:hint="@string/senha"
+        android:autofillHints="@string/senha"
         android:textColor="@color/Branco"
         android:textColorHint="@color/Branco"
         android:textSize="16sp"
@@ -72,7 +74,7 @@
         android:layout_height="108dp"
         android:layout_marginTop="25dp"
         android:gravity="center"
-        android:text="Preencha os dados a baixo para finalizar seu cadastro"
+        android:text="@string/titulo_cadastro"
         android:textColor="@color/Branco"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
@@ -85,7 +87,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
-        android:text="Cadastrar"
+        android:text="@string/cadastrar"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
         app:layout_constraintTop_toBottomOf="@id/campoSenha" />
@@ -95,6 +97,7 @@
         android:layout_width="368dp"
         android:layout_height="147dp"
         android:layout_marginTop="60dp"
+        android:contentDescription="@string/logo"
         app:layout_constraintBottom_toTopOf="@+id/guideline_baixo"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
         app:layout_constraintHorizontal_bias="1.0"
