--- a/app/src/main/res/layout/activity_jogos_acontecendo.xml
+++ b/app/src/main/res/layout/activity_jogos_acontecendo.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.JogosAcontecendoActivity">
+    tools:context=".view.activities.jogos.JogosAcontecendoActivity"
+    android:background="@drawable/mainbackground">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/JogosAcontecendoRecyclerView"
