--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -40,7 +40,7 @@
         android:layout_width="0dp"
         android:layout_height="150dp"
         android:gravity="center"
-        android:text="PERFIL"
+        android:text="@string/titulo_perfil"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
@@ -55,7 +55,8 @@
         android:layout_marginTop="56dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Nome Completo"
+        android:hint="@string/nome_completo"
+        android:autofillHints="@string/nome_completo"
         android:textColorHint="@color/Branco"
         android:textColor="@color/Branco"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
@@ -63,16 +64,19 @@
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
         app:layout_constraintTop_toBottomOf="@+id/cabeçalho" />
 
-    <EditText
+    <com.vicmikhailau.maskededittext.MaskedEditText
         android:id="@+id/telefoneUsuario"
         android:layout_width="0dp"
         android:layout_height="44dp"
         android:layout_marginTop="15dp"
         android:textColor="@color/Branco"
+        android:inputType="number"
         app:layout_constraintTop_toBottomOf="@id/nomeUsuario"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
-        android:hint="Telefone"
+        android:hint="@string/telefone"
+        android:autofillHints="@string/telefone"
+        app:mask="(##) #####-####"
         android:textColorHint="@color/Branco"/>
 
     <EditText
@@ -80,9 +84,11 @@
         android:layout_width="0dp"
         android:layout_height="44dp"
         android:layout_marginTop="15dp"
-        android:hint="Time do coração"
+        android:hint="@string/time_do_coracao"
+        android:autofillHints="@string/time_do_coracao"
         android:textColor="@color/Branco"
         android:textColorHint="@color/Branco"
+        android:inputType="textEmailAddress"
         app:layout_constraintTop_toBottomOf="@id/telefoneUsuario"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
@@ -93,7 +99,7 @@
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Salvar"
+        android:text="@string/salvar"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
         app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
@@ -103,7 +109,7 @@
         android:id="@+id/bt_voltar"
         android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:text="Voltar"
+        android:text="@string/voltar"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toEndOf="@id/guideline_esquerdo"
         app:layout_constraintEnd_toStartOf="@id/guideline_direito"
@@ -114,8 +120,9 @@
         android:layout_width="0dp"
         android:layout_height="44dp"
         android:layout_marginTop="20dp"
-        android:hint="Email"
-        android:inputType="textPersonName"
+        android:hint="@string/e_mail"
+        android:autofillHints="@string/e_mail"
+        android:inputType="textEmailAddress"
         android:textColor="@color/Branco"
         android:textColorHint="@color/Branco"
         app:layout_constraintEnd_toStartOf="@+id/guideline_direito"
