--- a/app/src/main/res/layout/match_item.xml
+++ b/app/src/main/res/layout/match_item.xml
@@ -16,6 +16,7 @@
             android:layout_height="112dp"
             android:layout_marginStart="16dp"
             android:layout_marginBottom="16dp"
+            android:contentDescription="@string/logo_do_time_da_casa"
             android:maxWidth="100dp"
             android:maxHeight="100dp"
             android:scaleType="fitXY"
@@ -69,7 +70,7 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@id/logoCasa"
             app:layout_constraintTop_toBottomOf="@id/placar"
-            app:layout_constraintVertical_bias="0.25" />
+            app:layout_constraintVertical_bias="0.16" />
 
         <ImageView
             android:id="@+id/logoFora"
@@ -80,6 +81,7 @@
             android:maxWidth="100dp"
             android:maxHeight="100dp"
             android:scaleType="fitXY"
+            android:contentDescription="@string/logo_do_time_de_fora"
             app:layout_constraintBottom_toBottomOf="@id/separador"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/logoCasa"
@@ -106,7 +108,7 @@
             android:layout_width="match_parent"
             android:layout_height="3dp"
             android:layout_marginStart="110dp"
-            android:layout_marginTop="64dp"
+            android:layout_marginTop="110dp"
             android:layout_marginEnd="110dp"
             android:background="@color/Branco"
             app:layout_constraintEnd_toEndOf="parent"
@@ -169,6 +171,37 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/status"
             app:layout_constraintVertical_bias="0.333" />
+
+        <TextView
+            android:id="@+id/arbitro"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="170dp"
+            android:layout_marginTop="104dp"
+            android:layout_marginEnd="46dp"
+            android:gravity="center"
+            android:textColor="@color/Branco"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toStartOf="@+id/nomeFora"
+            app:layout_constraintHorizontal_bias="0.568"
+            app:layout_constraintStart_toStartOf="@+id/nomeCasa"
+            app:layout_constraintTop_toTopOf="@+id/tempo" />
+
+        <TextView
+            android:id="@+id/estadio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="6dp"
+            android:gravity="center"
+            android:textColor="@color/Branco"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toTopOf="@+id/separador"
+            app:layout_constraintEnd_toStartOf="@+id/nomeFora"
+            app:layout_constraintHorizontal_bias="0.466"
+            app:layout_constraintStart_toEndOf="@+id/nomeCasa"
+            app:layout_constraintTop_toBottomOf="@+id/arbitro"
+            app:layout_constraintVertical_bias="0.857" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
