--- a/app/src/main/res/layout/activity_recuperacao_senha.xml
+++ b/app/src/main/res/layout/activity_recuperacao_senha.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.cadastro_login.RecuperacaoSenhaActivity"
+    tools:context=".view.activities.registerAndLogin.RecuperacaoSenhaActivity"
     android:background="@drawable/mainbackground">
 
     <androidx.constraintlayout.widget.Guideline
