--- a/app/src/main/res/layout/activity_times.xml
+++ b/app/src/main/res/layout/activity_times.xml
@@ -7,6 +7,20 @@
     tools:context=".view.activities.TimesActivity"
     android:background="@drawable/mainbackground">
 
+
+    <ProgressBar
+        android:id="@+id/pBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="136dp"
+        android:layout_height="123dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.32" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/TimesRecyclerView"
         android:layout_width="0dp"
