--- a/app/src/main/res/layout/activity_grupos.xml
+++ b/app/src/main/res/layout/activity_grupos.xml
@@ -7,6 +7,19 @@
     tools:context=".view.activities.GruposActivity"
     android:background="@drawable/mainbackground">
 
+    <ProgressBar
+        android:id="@+id/pBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="194dp"
+        android:layout_height="156dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.318" />
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/TabelaRecyclerView"
