--- a/app/src/main/res/layout/activity_next_matches.xml
+++ b/app/src/main/res/layout/activity_next_matches.xml
@@ -4,8 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.activities.matches.ProximosJogosActivity"
+    tools:context=".view.activities.matches.NextMatchesActivity"
     android:background="@drawable/mainbackground">
+
+
+    <ProgressBar
+        android:id="@+id/pBar"
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="152dp"
+        android:layout_height="134dp"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.36" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/jogosProximos_Recycleview"
