--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,17 @@
     tools:context=".view.activities.MainActivity"
     android:background="@drawable/mainbackground">
 
+
     <ImageView
         android:id="@+id/liberta_logo"
-        android:layout_width="410dp"
-        android:layout_height="189dp"
-        android:layout_marginTop="20dp"
+        android:layout_width="416dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo_champions" />
-
 
     <GridLayout
         android:layout_width="0dp"
@@ -136,5 +136,25 @@
         </androidx.cardview.widget.CardView>
 
     </GridLayout>
+
+    <ImageView
+        android:id="@+id/botbtn"
+        android:layout_width="110dp"
+        android:layout_height="84dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/bot" />
+
+    <ImageView
+        android:id="@+id/mapbtn"
+        android:layout_width="99dp"
+        android:layout_height="90dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/map" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
