--- a/app/src/main/res/layout/activity_players.xml
+++ b/app/src/main/res/layout/activity_players.xml
@@ -20,31 +20,36 @@
         app:layout_constraintVertical_bias="0.36" />
 
     <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="406dp"
-        android:layout_height="677dp"
+        android:layout_width="386dp"
+        android:layout_height="591dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@id/header">
 
-        <TextView
-            android:id="@+id/playersTextView"
-            android:layout_width="0dp"
-            android:layout_height="593dp"
-            android:layout_marginBottom="40dp"
-            android:fontFamily="@font/viga"
-            android:textColor="@color/Branco"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/header"
-            app:layout_constraintVertical_bias="0.127" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/playersTextView"
+                android:layout_weight="1"
+                android:layout_width="0dp"
+                android:layout_height="593dp"
+                android:layout_marginBottom="40dp"
+                android:fontFamily="@font/viga"
+                android:textColor="@color/Branco"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/header"
+                app:layout_constraintVertical_bias="0.127" />
+
+        </LinearLayout>
+
+
     </ScrollView>
-
 
     <TextView
         android:id="@+id/header"
