--- a/app/src/main/res/layout/activity_jogos.xml
+++ b/app/src/main/res/layout/activity_jogos.xml
@@ -19,17 +19,35 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.318" />
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/JogosRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginBottom="180dp"
+        android:layout_marginTop="65dp"
+        android:layout_marginBottom="165dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/titulo" />
+
+    <TextView
+        android:id="@+id/atualizar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="230dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="end"
+        android:fontFamily="@font/viga"
+        android:text="@string/atualizar_tabela"
+        android:drawableEnd="@drawable/update"
+        android:textColor="@color/Branco"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/JogosRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titulo" />
 
     <TextView
         android:id="@+id/titulo"
@@ -49,7 +67,7 @@
         android:id="@+id/jogosProx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="35dp"
         android:layout_marginStart="50dp"
         android:text="@string/proximos_jogos_botao"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,7 +77,7 @@
         android:id="@+id/jogosPassados"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
+        android:layout_marginTop="35dp"
         android:layout_marginEnd="50dp"
         android:text="@string/jogos_passados_botao"
         app:layout_constraintEnd_toEndOf="parent"
@@ -69,7 +87,7 @@
         android:id="@+id/jogosNow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="110dp"
+        android:layout_marginTop="100dp"
         android:layout_marginBottom="50dp"
         android:text="@string/jogos_acontecendo_botao"
         app:layout_constraintBottom_toBottomOf="parent"
