--- a/app/src/main/res/layout/activity_next_matches.xml
+++ b/app/src/main/res/layout/activity_next_matches.xml
@@ -20,6 +20,23 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.36" />
+    <TextView
+        android:id="@+id/atualizar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="11dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginStart="230dp"
+        android:layout_marginEnd="8dp"
+        android:gravity="end"
+        android:fontFamily="@font/viga"
+        android:text="@string/atualizar_tabela"
+        android:drawableEnd="@drawable/update"
+        android:textColor="@color/Branco"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/jogosProximos_Recycleview"
@@ -29,5 +46,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/atualizar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
