--- a/app/src/main/res/layout/activity_jogos.xml
+++ b/app/src/main/res/layout/activity_jogos.xml
@@ -19,6 +19,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.318" />
 
+    <TextView
+        android:id="@+id/data"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="60dp"
+        android:fontFamily="@font/viga"
+        android:gravity="end"
+        android:textColor="@color/Branco"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/JogosRecyclerView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/JogosRecyclerView"
         android:layout_width="0dp"
@@ -31,7 +45,7 @@
         app:layout_constraintTop_toTopOf="@id/titulo" />
 
     <TextView
-        android:id="@+id/atualizar"
+        android:id="@+id/atualizarbtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
