--- a/app/src/main/res/layout/activity_next_matches.xml
+++ b/app/src/main/res/layout/activity_next_matches.xml
@@ -20,8 +20,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.36" />
+
     <TextView
-        android:id="@+id/atualizar"
+        android:id="@+id/data"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/viga"
+        android:gravity="end"
+        android:textColor="@color/Branco"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/jogosProximos_Recycleview"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+    <TextView
+        android:id="@+id/atualizarb"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="11dp"
@@ -46,5 +59,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/atualizar" />
+        app:layout_constraintTop_toBottomOf="@id/atualizarbt" />
 </androidx.constraintlayout.widget.ConstraintLayout>
