--- a/app/src/main/res/layout/activity_groups.xml
+++ b/app/src/main/res/layout/activity_groups.xml
@@ -32,21 +32,24 @@
         android:textColor="@color/Branco"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/data" />
 
 
     <TextView
         android:id="@+id/data"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="2dp"
         android:fontFamily="@font/viga"
-        android:gravity="end"
+        android:gravity="center"
         android:textColor="@color/Branco"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/TabelaRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.318" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/TabelaRecyclerView"
