--- a/app/src/main/res/layout/activity_jogos.xml
+++ b/app/src/main/res/layout/activity_jogos.xml
@@ -21,17 +21,17 @@
 
     <TextView
         android:id="@+id/data"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="2dp"
         android:fontFamily="@font/viga"
         android:gravity="end"
         android:textColor="@color/Branco"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/JogosRecyclerView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/JogosRecyclerView" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/JogosRecyclerView"
