--- a/app/src/main/res/layout/activity_next_matches.xml
+++ b/app/src/main/res/layout/activity_next_matches.xml
@@ -23,14 +23,14 @@
 
     <TextView
         android:id="@+id/data"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/viga"
-        android:gravity="end"
+        android:gravity="center"
         android:textColor="@color/Branco"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/jogosProximos_Recycleview"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
     <TextView
@@ -49,7 +49,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/data" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/jogosProximos_Recycleview"
@@ -59,5 +59,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/atualizarbt" />
+        app:layout_constraintTop_toBottomOf="@id/atualizarb" />
 </androidx.constraintlayout.widget.ConstraintLayout>
