--- a/app/src/main/res/layout/activity_past_matches.xml
+++ b/app/src/main/res/layout/activity_past_matches.xml
@@ -28,7 +28,7 @@
         android:layout_marginBottom="5dp"
         android:layout_marginStart="230dp"
         android:layout_marginEnd="8dp"
-        android:gravity="end"
+        android:gravity="center"
         android:fontFamily="@font/viga"
         android:text="@string/atualizar_tabela"
         android:drawableEnd="@drawable/update"
@@ -36,18 +36,18 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/data" />
     <TextView
         android:id="@+id/data"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:fontFamily="@font/viga"
         android:gravity="end"
         android:textColor="@color/Branco"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/jogosAnt_Recycleview"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
