--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -16,7 +16,7 @@
             android:id="@+id/btn_center"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_gravity="end|top"
+            android:layout_gravity="left|top"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="11dp"
             android:background="@drawable/map_button"
